welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: type mismatch;
 found   : Unit
 required: Int
	for (y<-0 to 2) {
              ^